<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:captionedimageview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/encryptButton"
            captionedimageview:caption="@string/encrypt"
            captionedimageview:img_src="@drawable/ic_lock"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/decryptButton"
            captionedimageview:caption="@string/decrypt"
            captionedimageview:img_src="@drawable/ic_unlock"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/copyButton"
            captionedimageview:caption="@string/copy"
            captionedimageview:img_src="@drawable/ic_copy"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/moveButton"
            captionedimageview:caption="@string/move"
            captionedimageview:img_src="@drawable/ic_move"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/deleteButton"
            captionedimageview:caption="@string/delete"
            captionedimageview:img_src="@drawable/ic_trash"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/renameButton"
            captionedimageview:caption="@string/rename"
            captionedimageview:img_src="@drawable/ic_cursor"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/favoriteButton"
            captionedimageview:caption="@string/favorite"
            captionedimageview:img_src="@drawable/ic_star"
            style="@style/FileOptionsCaptionedImageButton"
            />

        <com.dewdrop623.androidaescrypt.FileBrowsing.ui.view.CaptionedImageButton
            android:id="@+id/unfavoriteButton"
            captionedimageview:caption="@string/unfavorite"
            captionedimageview:img_src="@drawable/ic_star"
            style="@style/FileOptionsCaptionedImageButton"
            />
    </LinearLayout>
</HorizontalScrollView>