<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/MissingFilesHelpTextView"
            android:text="@string/internal_storage_not_visible" />

        <ImageView
            style="@style/MissingFilesHelpImage"
            android:src="@mipmap/missing_files" />

        <TextView
            style="@style/MissingFilesHelpTextView"
            android:text="@string/select_overflow_menu" />

        <ImageView
            style="@style/MissingFilesHelpImage"
            android:src="@mipmap/overflow_menu" />

        <TextView
            style="@style/MissingFilesHelpTextView"
            android:text="@string/select_show_internal_storage" />

        <ImageView
            style="@style/MissingFilesHelpImage"
            android:src="@mipmap/show_internal_storage" />

        <TextView
            style="@style/MissingFilesHelpTextView"
            android:text="@string/internal_storage_visible" />

        <ImageView
            style="@style/MissingFilesHelpImage"
            android:src="@mipmap/found_files" />
    </LinearLayout>
</ScrollView>