<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iconAttributionImageView"
        android:layout_alignParentStart="true"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:tint="@android:color/darker_gray"/>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/iconAttributionImageView">
    <TextView
        android:text="@string/icon_made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/iconCreatorTextView"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00F"/>
    <TextView
        android:text="@string/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/flatIconLinkTextView"
        android:text="@string/flaticon_link"
        android:layout_marginStart="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00F"/>

</LinearLayout>
</RelativeLayout>